--- a/fly.toml
+++ b/fly.toml
@@ -1,5 +1,8 @@
 app = "full-stack-open-pokedex-empty-firefly-6163"
 
+[deploy]
+  strategy = "canary"
+
 [env]
   PORT = "3000"
 
@@ -13,3 +16,11 @@ app = "full-stack-open-pokedex-empty-firefly-6163"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+  [[http_service.http_checks]]
+    grace_period = "1m"
+    interval = "30s"
+    method = "GET"
+    timeout = "5s"
+    path = "/health"
+    protocol = "http"
