--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: npm install
       - run: npm run build
-      - run: flyctl deploy --remote-only
+      - if: ${{ github.event_name == 'push' }}
+        run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
