--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,7 +42,7 @@ jobs:
     if: ${{ github.event_name == 'push' }}
     steps:
       - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.70
+        uses: anothrNick/github-tag-action@1.70.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEFAULT_DUMP: patch
+          DEFAULT_BUMP: patch
