--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,6 +35,21 @@ jobs:
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      - name: Notify Success
+        uses: rjstone/discord-webhook-notify@v1.0.4
+        if: success()
+        with:
+          severity: info
+          details: 'A new version of Pokedex deployed to [https://full-stack-open-pokedex-empty-firefly-6163.fly.dev/](https://full-stack-open-pokedex-empty-firefly-6163.fly.dev/) by ${{ github.actor }}'
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Notify Failure
+        uses: rjstone/discord-webhook-notify@v1
+        if: failure()
+        with:
+          severity: error
+          details: |
+            **commit** [${{github.event.head_commit.id}}](${{ github.event.head_commit.url}}) by ${{ github.actor }} broke the build :(
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
   tag_release:
     needs: [simple_deployment_pipeline]
