--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: github context
         env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
+          GITHUB_CONTEXT: ${{ toJson(vars) }}
         run: echo "$GITHUB_CONTEXT"
       - name: commits
         env:
