--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,22 +36,20 @@ jobs:
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       - name: Notify Success
+        if: ${{ success() }}
         uses: rjstone/discord-webhook-notify@v1.0.4
-        if: ${{ success() && github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') }}
         with:
           severity: info
-          description: ''
-          details: |
-            A new version of Pokedex deployed to [https://full-stack-open-pokedex-empty-firefly-6163.fly.dev/](https://full-stack-open-pokedex-empty-firefly-6163.fly.dev/) by ${{ github.actor }}
+          text: A new version of Pokedex deployed
+          description: to https://full-stack-open-pokedex-empty-firefly-6163.fly.dev/ by ${{ github.actor }}
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Notify Failure
-        uses: rjstone/discord-webhook-notify@v1
-        if: ${{ failure() && github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') }}
+        if: ${{ failure() }}
+        uses: rjstone/discord-webhook-notify@v1.0.4
         with:
           severity: error
-          description: ''
-          details: |
-            **commit** [${{ github.event.head_commit.id }}](${{ github.event.head_commit.url }}) by ${{ github.actor }} broke the build :(
+          text: Build failed
+          description: commit ${{ github.event.head_commit.url }} by ${{ github.actor }} broke the build :(
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
   tag_release:
